<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="right|center"
            android:textColor="@color/white"
            android:text="@string/inicial"
            android:textSize="60sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btnNombre"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:layout_marginRight="2dp"
                    android:backgroundTint="@color/nombre"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:text="@string/pizango" />
                <Button
                    android:id="@+id/btnBorrar"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:layout_marginRight="2dp"

                    android:backgroundTint="@color/operadores"
                    android:text="@string/limpiar" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btnSiete"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="numeroPres"
                    android:textSize="35sp"
                    android:layout_marginRight="2dp"
                    android:text="@string/siete" />
                <Button
                    android:id="@+id/btnOcho"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="numeroPres"
                    android:textSize="35sp"
                    android:layout_marginRight="2dp"
                    android:text="@string/ocho" />
                <Button
                    android:id="@+id/btnNueve"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="numeroPres"
                    android:textSize="35sp"
                    android:layout_marginRight="2dp"
                    android:text="@string/nueve" />
                <Button
                    android:id="@+id/btnDivision"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="operadorPres"
                    android:textSize="35sp"
                    android:backgroundTint="@color/operadores"
                    android:text="@string/division" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btnCuatro"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="numeroPres"
                    android:textSize="35sp"
                    android:layout_marginRight="2dp"
                    android:text="@string/cuatro" />
                <Button
                    android:id="@+id/btnCinco"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="numeroPres"
                    android:textSize="35sp"
                    android:layout_marginRight="2dp"
                    android:text="@string/cinco" />
                <Button
                    android:id="@+id/btnSeis"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="numeroPres"
                    android:textSize="35sp"
                    android:layout_marginRight="2dp"
                    android:text="@string/seis" />
                <Button
                    android:id="@+id/btnMultiplicacion"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="operadorPres"
                    android:textSize="35sp"
                    android:backgroundTint="@color/operadores"
                    android:text="@string/multiplicacion" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btnUno"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="numeroPres"
                    android:textSize="35sp"
                    android:layout_marginRight="2dp"
                    android:text="@string/uno" />
                <Button
                    android:id="@+id/btnDos"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="numeroPres"
                    android:textSize="35sp"
                    android:layout_marginRight="2dp"
                    android:text="@string/dos" />
                <Button
                    android:id="@+id/btnTres"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="numeroPres"
                    android:textSize="35sp"
                    android:layout_marginRight="2dp"
                    android:text="@string/tres" />
                <Button
                    android:id="@+id/btnResta"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="operadorPres"
                    android:textSize="35sp"
                    android:backgroundTint="@color/operadores"
                    android:text="@string/resta" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btnPunto"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="numeroPres"
                    android:textSize="35sp"
                    android:layout_marginRight="2dp"
                    android:text="@string/punto" />
                <Button
                    android:id="@+id/btnCero"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="numeroPres"
                    android:textSize="35sp"
                    android:layout_marginRight="2dp"
                    android:text="@string/cero" />

                <Button
                    android:id="@+id/btnIgual"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:textSize="35sp"
                    android:backgroundTint="@color/operadores"
                    android:text="@string/igual" />

                <Button
                    android:id="@+id/btnSuma"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="operadorPres"
                    android:textSize="35sp"
                    android:backgroundTint="@color/operadores"
                    android:text="@string/suma" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>